--- a/index.html
+++ b/index.html
@@ -1,4 +1,54 @@
 <html>
 <a href="https://github.com/open-eo/">
 <img src="openeo_logo.png"></img></a>
+
+<em>openEO, A Common, Open Source Interface between Earth Observation Data
+Infrastructures and Front-End Applications</em> is a H2020 project funded
+under call <a href="https://ec.europa.eu/research/participants/portal/desktop/en/opportunities/h2020/topics/eo-2-2017.html">EO-2-2017: EO Big Data Shift</a>, under propoasl number 776242. It will run from Oct 2017 to Sept 2020.
+
+<em>Proposal abstract:</em>
+The capabilities of the latest generation of Earth observation
+satellites to collect large volumes of diverse and thematically
+rich data are unprecedented. For exploiting these valuable data
+sets, many research and industry groups have started to shift their
+processing into the cloud. Although the functionalities of existing
+cloud computing solutions largely overlap, there are all custom-made
+and tailored to the specific data infrastructures. This lack of
+standards not only makes it hard for end users and application
+developers to develop generic front-ends, but also to compare the
+cloud offerings by running the same analysis against different
+cloud back-ends. To solve this, a common interface that allows end-
+and intermediate users to query cloud-based back offices and carry
+out computations on them in a simple way is needed. The openEO
+project will design such an interface, implement it as an open
+source community project, bind it to generic analytics front-ends
+and evaluate it against a set of relevant Earth observation cloud
+back offices. The openEO interface will consist of three layers of
+Application Programming Interfaces, namely a core API for finding,
+accessing, and processing large datasets, a driver APIs to connect
+to back offices operated by European and worldwide industry,
+and client APIs for analysing these datasets using R, Python and
+JavaScript. To demonstrate the capability of the openEO interface,
+four use cases based chiefly on Sentinel-1 and Sentinel-2 time series
+will be implemented. openEO will simplify the use of cloud-based
+processing engines, allow switching between cloud-based back office
+providers and comparing them, and enable reproducible, open Earth
+observation science. Thereby, openEO reduces the entry barriers
+for the adaptation of cloud computing technologies by a broad user
+community and paves the way for the federation of infrastructure
+capabilities.
+
+Partners in the consortium are:
+<ol>
+<li> Technische Universitaet Wien (Coordinator), AT
+<li> Westfaelische Wilhelms-Universitaet Muenster, DE
+<li> Wageningen University, NL
+<li> Vlaamse Instelling Voor Technologisch Onderzoek N.V., BE
+<li> Earth Observation Data Centre for Water Resources Monitoring GmbH, AT
+<li> Mundialis GmbH and Co. KG, DE
+<li> Sinergise Laboratorij Za Geografske Informacijske Sisteme Doo, SI
+<li> Academia Europea di Bolzano (EURAC), IT
+<li> Solenix Schweiz GmbH, CH
+<li> Joint Research Centre of the European Commission, IT
+<ol>
 </html>
