--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Partners in the consortium are:
 <li> Earth Observation Data Centre for Water Resources Monitoring GmbH, AT
 <li> Mundialis GmbH and Co. KG, DE
 <li> Sinergise Laboratorij Za Geografske Informacijske Sisteme Doo, SI
-<li> Academia Europea di Bolzano (EURAC), IT
+<li> Accademia Europea di Bolzano (EURAC Research), IT
 <li> Solenix Schweiz GmbH, CH
 <li> Joint Research Centre of the European Commission, IT
 </ol>
