--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ Partners in the consortium are:
 <li> Accademia Europea di Bolzano (EURAC Research), IT
 <li> Solenix Schweiz GmbH, CH
 <li> Joint Research Centre of the European Commission, IT
+<li> Google Earth Engine, US/CH (non-funded participant)
 </ol>
 
 Further information:
