--- a/index.html
+++ b/index.html
@@ -67,4 +67,17 @@ blog entry that motivated the openEO proposal</a>
 <li> An open <a href="https://github.com/Open-EO/discuss/issues">discussion forum</a>
 </ul>
 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-74430894-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+
 </html>
+
