--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@ blog entry that motivated the openEO proposal</a>
 <li> An open <a href="https://github.com/Open-EO/discuss/issues">discussion forum</a>
 </ul>
 
+<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">openEO is kicking off in Vienna! <a href="https://twitter.com/hashtag/openeo?src=hash&amp;ref_src=twsrc%5Etfw">#openeo</a> <a href="https://twitter.com/EU_H2020?ref_src=twsrc%5Etfw">@EU_H2020</a>  <a href="https://twitter.com/CopernicusEU?ref_src=twsrc%5Etfw">@CopernicusEU</a> <a href="https://twitter.com/MarkusNeteler?ref_src=twsrc%5Etfw">@MarkusNeteler</a> <a href="https://twitter.com/appelmar?ref_src=twsrc%5Etfw">@appelmar</a> <a href="https://twitter.com/janverbesselt?ref_src=twsrc%5Etfw">@janverbesselt</a> <a href="https://twitter.com/EODC_GmbH?ref_src=twsrc%5Etfw">@EODC_GmbH</a> <a href="https://t.co/lT7NLz2qmw">https://t.co/lT7NLz2qmw</a> <a href="https://t.co/Yghi3WdavQ">pic.twitter.com/Yghi3WdavQ</a></p>&mdash; Edzer Pebesma (@edzerpebesma) <a href="https://twitter.com/edzerpebesma/status/918791701233389569?ref_src=twsrc%5Etfw">October 13, 2017</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108069281-1"></script>
 <script>
@@ -77,6 +81,7 @@ blog entry that motivated the openEO proposal</a>
 
   gtag('config', 'UA-108069281-1');
 </script>
+
 
 
 </html>
