--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <em>openEO, A Common, Open Source Interface between Earth Observation Data
 Infrastructures and Front-End Applications</em> is a H2020 project funded
-under call <a href="https://ec.europa.eu/research/participants/portal/desktop/en/opportunities/h2020/topics/eo-2-2017.html">EO-2-2017: EO Big Data Shift</a>, under propoasl number 776242. It will run from Oct 2017 to Sept 2020.
+under call <a href="https://ec.europa.eu/research/participants/portal/desktop/en/opportunities/h2020/topics/eo-2-2017.html">EO-2-2017: EO Big Data Shift</a>, under proposal number 776242. It will run from Oct 2017 to Sept 2020.
 
 <p>
 
